# 3d-game

./: CMakeLists.txt  README.md
Assignment 3/: CMakeLists.txt  INSTALL_CMAKE.md  README.md  camera.cpp  camera.h  main.cpp  model.cpp  model.h
Assignment 3/resource/shaders/: model.fs  model.vs
Assignment_4/: CMakeLists.txt  README.md  anim_model.fs  anim_model.vs  main.cpp
Assignment_4/learnopengl/: animation.h  model_animation.h  root_directory.h
Final_Project/: CMakeLists.txt  README.md  main.cpp
Final_Project/resources/fs/: shader.fs
Final_Project/resources/vs/: shader.vs
